[gd_scene load_steps=12 format=3 uid="uid://cmfqtosl0xcn3"]

[ext_resource type="PackedScene" uid="uid://cn4km1kr2hqtw" path="res://scenes/item/ability/ability.tscn" id="1_mc17k"]
[ext_resource type="Script" path="res://scenes/item/ability/electric_field/electric_field.gd" id="2_jegiw"]
[ext_resource type="Texture2D" uid="uid://c283yvi84xsuh" path="res://tress/at_ability_electric_field.tres" id="3_jeww4"]
[ext_resource type="Script" path="res://scenes/utility/hit_box.gd" id="4_swala"]
[ext_resource type="AudioStream" uid="uid://caj7rpp7wooop" path="res://assets/sounds/electric_field.mp3" id="5_qbfkt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2f2hu"]
size = Vector2(60, 60)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_83anl"]
bg_color = Color(0, 1, 1, 1)
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 1, 1, 1)

[sub_resource type="Animation" id="Animation_x05ae"]
resource_name = "Rotate"
length = 24.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ElectricFieldArea:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 24),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gijuy"]
_data = {
"Rotate": SubResource("Animation_x05ae")
}

[sub_resource type="Animation" id="Animation_i4lkj"]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ElectricFieldArea/Area2D/Effect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ElectricFieldArea/Area2D/Effect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lwne6"]
_data = {
"Attack": SubResource("Animation_i4lkj")
}

[node name="ElectricField" instance=ExtResource("1_mc17k")]
scale = Vector2(5, 5)
script = ExtResource("2_jegiw")
pickable = false

[node name="Sprite2D" parent="." index="0"]
modulate = Color(0, 1, 1, 1)
texture = ExtResource("3_jeww4")

[node name="Area2D" parent="." index="1"]
visible = false

[node name="ElectricFieldArea" type="Node2D" parent="." index="2"]

[node name="Area2D" type="Area2D" parent="ElectricFieldArea" index="0"]
collision_layer = 0
collision_mask = 128
script = ExtResource("4_swala")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElectricFieldArea/Area2D" index="0"]
shape = SubResource("RectangleShape2D_2f2hu")

[node name="RectEdge" type="Control" parent="ElectricFieldArea/Area2D" index="1"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ElectricFieldArea/Area2D/RectEdge" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_83anl")

[node name="Effect" type="Control" parent="ElectricFieldArea/Area2D" index="2"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ElectricFieldArea/Area2D/Effect" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_83anl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_gijuy")
}

[node name="EffectAnimPlayer" type="AnimationPlayer" parent="." index="4"]
libraries = {
"": SubResource("AnimationLibrary_lwne6")
}

[node name="SoundPlayer" parent="." index="5"]
stream = ExtResource("5_qbfkt")
volume_db = -24.0

[connection signal="area_entered" from="ElectricFieldArea/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="ElectricFieldArea/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
